<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Droid Desserts</string>
    <string name="donut_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_desc">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="name">Name</string>
    <string name = "address">Address</string>
    <string name = "enter_address">Enter your address</string>
    <string name ="phone_number">Phone</string>
    <string name = "enter_phone_number">Enter Phone Number</string>
    <string name = "email">Email</string>
    <string name = "enter_your_email">Enter Email</string>
    <string name ="note">Note</string>
    <string name = "enter_note">Enter Note</string>
    <string name = "choose_delivery">Choose Delivery Speed</string>
    <string name = "same_day">Same Day Delivery</string>
    <string name = "next_day">Next Day Ground Delivery</string>
    <string name = "pick_up">Pick up</string>
    <string name="contacts">Contact</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favourites">Favourites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
