<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id = "@+id/action_order"
        android:orderInCategory="10"
        android:title = "@string/order"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart"/>
    <item
        android:id ="@+id/action_status"
        android:orderInCategory="20"
        android:title = "@string/status"
        app:showAsAction="always"
        android:icon = "@drawable/ic_status_info"/>
    <item
        android:id = "@+id/action_favourites"
        android:title = "@string/favourites"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"
        android:icon = "@drawable/ic_favourites"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />
</menu>
